2000-02-21  Dan Winship  <danw@helixcode.com>

	* camel-session.h: (struct _CamelSession): Add authenticator.

	* camel-session.c (camel_session_new): Add authenticator.
	(camel_session_query_authenticator): New function to query the
	session authenticator for password, etc, information.

2000-02-21  Dan Winship  <danw@helixcode.com>

	* camel-session.c: add CamelExceptions to several functions. Use
	camel_session_new to initialize the session and URL fields of
	created CamelStores as appropriate.

	* camel-store.h:
	* camel-store.c
	* camel-service.h:
	* camel-service.c: Move the session and url (and associated
	functions) from CamelStore to CamelService. Add url_flags to
	CamelService so subclasses can specify which URL components
	are mandatory for them.	Add camel_session_new for
	camel_session_get_store* to use.

	* providers/mbox/camel-mbox-folder.c:
	* providers/mbox/camel-mbox-store.c:
	* providers/mbox/camel-mbox-store.h: Update for above changes.

	* camel-exception-list.def: Once camel is being used for real,
	exceptions won't be renumberable. So renumber them now to make
	more room to add exceptions to the various categories later, and
	add a big warning message.

2000-02-20  Dan Winship  <danw@helixcode.com>

	* providers/mbox/Makefile.am: add libibex back to
	libcamelmbox_la_LIBADD

2000-02-18  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-search.h
	(camel_mbox_folder_search_by_expression): Added exception to call,
	and fixed caller.

	* providers/mbox/camel-mbox-search.c
	(camel_mbox_folder_search_by_expression): Major changes, to use
	the sexp evaluator from filter/filter-sexp.c to implement the
	searching.
	(func_body_contains): Changed to support multiple strings in 1
	command (results or'd together)

	* url-util.c (g_url_new): Fixed a typo (colon == 0 isn't right),
	and made it so full url's are absolute pathed (Dan, this is how it
	has to work!).  Also, always include a path part, even if it is an
	empty string.
