@@ -1,3 +1,8 @@
+2000-02-21  NotZed  <NotZed@HelixCode.com>
+
+	* providers/mbox/Makefile.am: Uh, fixed LIBADD again.  What was
+	there was never ever going to work, wasn't it tested?
+
 2000-02-21  Dan Winship  <danw@helixcode.com>
 
 	* camel-session.h: (struct _CamelSession): Add authenticator.
